[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/MenuAssets/Play_not_pressed.png" type="Texture" id=1]
[ext_resource path="res://Assets/MenuAssets/Settings_not_pressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/MenuAssets/Settings_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/MenuAssets/Quit_not_ressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/MenuAssets/Credits_not_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/MenuAssets/MenuHoverBar.png" type="Texture" id=6]
[ext_resource path="res://Assets/MenuAssets/Credits_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/MenuAssets/Quit_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/MenuAssets/Play_pressed.png" type="Texture" id=9]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=10]
[ext_resource path="res://Menus/Slideshow.tscn" type="PackedScene" id=11]
[ext_resource path="res://Menus/Credits.tscn" type="PackedScene" id=12]
[ext_resource path="res://Menus/Settings.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/IndieFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = SubResource( 3 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Panel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.537255, 0.533333, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -298.0
margin_right = 298.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Racing Papers"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 208.0
margin_top = 110.0
margin_right = 485.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 4 )
text = "A Game by Jason Abrams"
align = 1
valign = 1

[node name="Slideshow" parent="." instance=ExtResource( 11 )]
margin_left = 444.0
margin_top = 186.0
margin_right = 29.0
margin_bottom = 20.0

[node name="Hover" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.658824 )
margin_left = 80.0
margin_top = 302.0
margin_right = 255.0
margin_bottom = 362.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 86.0
margin_top = 147.0
margin_right = 283.0
margin_bottom = 376.0
__meta__ = {
"_edit_group_": true
}

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 197.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 9 )
stretch_mode = 3

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 197.0
margin_bottom = 104.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
stretch_mode = 3

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 197.0
margin_bottom = 158.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
stretch_mode = 3

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 197.0
margin_bottom = 212.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
stretch_mode = 3

[node name="Credits" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Settings" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
